start script fix

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Telegram roll dice",
   "main": "index.js",
   "scripts": {
-    "start": "index.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
