--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cool-ascii-faces": "^1.3.4",
+    "ejs": "^2.6.1",
     "express": "^4.17.1",
     "telegraf": "^3.30.1"
   }
