--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cool-ascii-faces": "^1.3.4",
     "ejs": "^2.6.1",
     "express": "^4.17.1",
+    "http": "0.0.0",
     "telegraf": "^3.30.1"
   }
 }
