--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "http": "0.0.0",
     "rng": "^0.2.2",
-    "telegraf": "^3.30.1"
+    "telegraf": "^3.30.1",
+    "xorshift": "^1.1.1"
   }
 }
